feat: Implement admin authentication and enhance security configurations
- Added admin sign-in endpoint in AuthController to authenticate admin users and return JWT tokens.
- Updated SecurityConfig to allow public access to the admin login endpoint while restricting access to other admin routes.
- Improved user role checks in AdminController to handle null role cases.
- Refactored frontend AdminLogin component to handle admin-specific login logic and error messages.
- Enhanced AdminRoute to bypass authentication checks when accessing the admin login page.
- Updated application properties for database connection settings.